--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -24,10 +24,8 @@ jobs:
 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
-        cd api_yamdb/
-        python manage.py test
+        pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
