--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -22,15 +22,10 @@ jobs:
         # установка зависимостей
         pip install -r api_yamdb/requirements.txt 
 
-    - name: Test with flake8 and django tests
+    - name: Test with flake8 and pytest
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd api_yamdb/
-        # запустить написанные разработчиком тесты
-        python manage.py test
+        pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
