--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -22,7 +22,7 @@ jobs:
         # установка зависимостей
         pip install -r api_yamdb/requirements.txt 
 
-    - name: Test with flake8 and django tests
+    - name: Test with flake8 and pytest
       run: |
         python -m flake8
         pytest
