--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -28,9 +28,9 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
 
-      - static_value:/app/static/
+      - static_value:/var/html/static/
 
-      - media_value:/app/media/
+      - media_value:/var/html/media/
 
     depends_on:
       - web
