--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -64,6 +64,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            sudo docker pull klokly/yamdb_final
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
@@ -74,6 +75,9 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d 
+            sudo docker-compose exec -T web python manage.py makemigrations --noinput
+            sudo docker-compose exec -T web python manage.py migrate --noinput
+            sudo docker-compose exec -T web python manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
